# gitzip

./: .flake8  .gitignore  README.md  pyproject.toml  run.bat  run.sh  setup.py
gitzip/: __init__.py  __main__.py  gitzip.py
src/gitzip/: __init__.py  __main__.py  gitzip.py  static.py  version.py
