[tool.poetry]
name = "gitzip"
version = "2.0.1"
description = "A small python program to export files changed between git commits or branches to a zip file retaining the directory structure."
authors = ["miile7"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
